--- a/res/application/views/components/navbar_empresa.html.twig
+++ b/res/application/views/components/navbar_empresa.html.twig
@@ -1,10 +1,5 @@
-<div class="row">
+<div class="row navbar-row">
   <div class="navbar-empresa">
-    <div class="col-xs-1">
-      <a class="btn-lg btn-block" style="color: #FFF">
-        <i class="fa fa-download"></i>
-      </a>
-    </div>
 
     <div class="col-xs-2 {% if inicio %}active{% endif %}">
       <a class="btn btn-lg btn-block" href="{{base_url()}}empresa/inicio/{{empresa.id}}">
@@ -32,19 +27,15 @@
         <i class="fa fa-phone"></i>
       </a>
     </div>
-
     <div class="col-xs-2 {% if descargar_catalogo %}active{% endif %}">
       <a class="btn btn-lg btn-block" href="{{base_url()}}empresa/descargar_catalogo/{{empresa.id}}">
         <i class="fa fa-download"></i>
       </a>
     </div>
-    <div class="col-xs-1">
-      <a class="btn-lg btn-block">
-        <i class="fa fa-download"  style="color: #FFF"></i>
-      </a>
+    <div class="col-xs-2 {% if descargar_catalogo %}active{% endif %}">
+
     </div>
 
   </div>
 </div>
 <!-- /.row -->
-
