--- a/res/application/views/components/nuestra-empresa.html.twig
+++ b/res/application/views/components/nuestra-empresa.html.twig
@@ -7,28 +7,29 @@
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <img class="" src="{{ img_url() }}membresia/{{ membresia.logo }}" 
-                alt="Icono Membresia" width="20px">
+                <i class="fa fa-map-marker fa-lg fa-fw font-naranja"></i> 
+                <span>
+                    Buenaventura
+                </span>
+            </div>
+            <div class="col-xs-12">
+                <img class="img_verificacion" src="{{ img_url() }}membresia/{{ membresia.logo }}" 
+                alt="Icono Membresia" width="19px">
                 <span class="texto-membresia">
                     Empresa Platino
                 </span>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-12">
                 {% if empresa.verificacion == 'Y' %}
                 <span class="titulo_validacion">
-                    <img class="inline-block img_verificacion" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion" width="20px">
+                    <img class="inline-block img_verificacion" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion" width="19px">
                     <span class="texto-membresia">
                         Verificada
                     </span>
                 </span>
                 {% endif %}
             </div>
-            <div class="col-xs-6">
-                <i class="fa fa-map-marker font-naranja"></i> 
-                <span class="texto-membresia">
-                    Buenaventura
-                </span>
-            </div>
+
         </div>
         <hr>
         <div class="row">
