--- a/res/assets/css/carlos.css
+++ b/res/assets/css/carlos.css
@@ -157,16 +157,12 @@ span.text-grey{
 .top_menu a{
   color: #FFF;
 }
-.navbar-empresa {
-  -webkit-box-shadow: 0px 2px 10px #999;
-  -moz-box-shadow: 0px 2px 10px #999;
-}
+
 .navbar-empresa div{
   padding-right: 0px; 
   padding-left: 0px; 
   border-top: 1px solid #B7B7B7;
   border-bottom: 4px solid #0080C0;
-  margin: 10px 0px;
 }
 
 .navbar-empresa div.active {
@@ -191,11 +187,27 @@ span.text-grey{
   padding-right: 20px;
 }
 .texto-membresia{
-  font-size: 13px;
+  /*font-size: 13px;*/
+  padding-left: 3px;
 }
 .video{
   position: absolute;
   top: 200px;
   left: 0;
   width: 100%;
+}
+.navbar-row{
+  -webkit-box-shadow: 0px 5px 10px rgba(153, 153, 153, 0.75);;
+  -moz-box-shadow: 0px 5px 10px rgba(153, 153, 153, 0.75);;
+  box-shadow: 0px 5px 10px rgba(153, 153, 153, 0.75);;
+}
+.navbar-empresa i.fa {
+    font-size: 22px;
+}
+
+.btn-lg{
+  border-radius: 3px;
+}
+img.img_verificacion {
+    margin-left: 2px;
 }
