--- a/res/assets/css/carlos.css
+++ b/res/assets/css/carlos.css
@@ -17,7 +17,9 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
+.descripcion_empresa{
+  font-size: 16px;
+}
 .banner{
     width:100%;
     height: 200px;
