--- a/res/assets/css/index/top_menu.css
+++ b/res/assets/css/index/top_menu.css
@@ -1,16 +1,16 @@
 #content_general{
-	background: rgb(249, 249, 249);
 	height: auto;
 	max-width: 100%;
-	margin-bottom: 5px;
+	margin-bottom: 20px;
+	-webkit-box-shadow: 0px 3px 10px rgba(153, 153, 153, 0.41);
+	-moz-box-shadow: 0px 3px 10px rgba(153, 153, 153, 0.41);
+	box-shadow: 0px 3px 10px rgba(153, 153, 153, 0.41);
 }
 #sub_content_general
 {
 	max-width: 100%;
 }
 #texto_bienvenido{
-	font-size: 13px;
-	color: rgb(156, 156, 156);
 	margin-left:  20px !important;
 	margin-top: 12px;
 }
@@ -20,17 +20,21 @@
 	/*margin-left: -12px;*/
 }
 .contenedor_top{
-	border-right: 2px solid #D9D9D9;
+	/*border-right: 2px solid #D9D9D9;*/
 	height: 23px;
 }
 .contenedor_gral{
-	margin-top: 5px;
+	margin-top: 11px;
 	float: right;
 	/*margin-right: 6px;*/
 }
 .ingresar_ico{
 	/*padding-right: 3px;*/
 }
+.icono-ingresar{
+	font-size: 20px;
+}
+	
 
 @media (max-width: 991px) {
 	.contenedor_top{
@@ -49,5 +53,4 @@
 	margin-bottom: 5px;
 }
 }
-
 
