--- a/res/assets/css/index/top_menu.css
+++ b/res/assets/css/index/top_menu.css
@@ -34,7 +34,10 @@
 .icono-ingresar{
 	font-size: 20px;
 }
-	
+
+.bor_botoom{
+	margin-top: 12px;
+}
 
 @media (max-width: 991px) {
 	.contenedor_top{
