Popup de imagenes listo

--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -67,5 +67,5 @@
     {# Libreria para sliders #}
     <script src="{{ assets_url() }}slick/slick/slick.min.js" ></script>
     <script src="{{ assets_url() }}swipebox/js/jquery.swipebox.min.js"></script>
-    <script src="{{js_url()}}slider.js"></script>
+    <script src="{{js_url()}}inicio-movil.js"></script>
 {% endblock javascripts %}
