Copiados los diseños del slider de videos

--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -3,42 +3,7 @@
         <h3 class="titulos"><strong>Videos de la Empresa</strong></h3>
         <div class="multiple-items">
             <div>
-                <a data-toggle="modal" 
-                data-target="#youtube-modal" 
-                data-idvideo="gVhd_vLYgd4" >
-                    <div class="youtube">
-                        <img  
-                        src="https://i.ytimg.com/vi/gVhd_vLYgd4/hqdefault.jpg" 
-                        alt="">
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a data-toggle="modal" 
-                data-target="#youtube-modal" 
-                data-idvideo="J44NKsBg20w" >
-                    <div class="youtube">
-                        <img  
-                        src="https://i.ytimg.com/vi/J44NKsBg20w/hqdefault.jpg" 
-                        alt="">
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a data-toggle="modal" 
-                data-target="#youtube-modal" 
-                data-idvideo="vKUiaMEOH18" >
-                    <div class="youtube">
-                        <img  
-                        src="https://i.ytimg.com/vi/vKUiaMEOH18/hqdefault.jpg" 
-                        alt="">
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a data-toggle="modal" 
-                data-target="#youtube-modal" 
-                data-idvideo="nZolJafJM_c" >
+                <a class="swipebox-video" rel="gallery-videos" href="https://www.youtube.com/watch?v=nZolJafJM_c">
                     <div class="youtube">
                         <img  
                         src="https://i.ytimg.com/vi/nZolJafJM_c/hqdefault.jpg" 
@@ -46,20 +11,14 @@
                     </div>
                 </a>
             </div>
-
-        </div>
-    </div>
-</div>
-
-<!-- MODAL -->
-<div class="modal fade" id="youtube-modal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <div>
-                    <iframe width="100%" height="350" src=""></iframe>
-                </div>
+            <div>
+                <a class="swipebox-video" rel="youtube" href="https://www.youtube.com/watch?v=nZolJafJM_c">
+                    <div class="youtube">
+                        <img  
+                        src="https://i.ytimg.com/vi/nZolJafJM_c/hqdefault.jpg" 
+                        alt="">
+                    </div>
+                </a>
             </div>
         </div>
     </div>
