--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -2,6 +2,8 @@
     <div class="col-xs-12">
         <h3 class="titulos"><strong>Videos de la Empresa</strong></h3>
         <div class="multiple-items">
+            
+            <!-- cada item necesita de la imagen miniatura del video y el video como tal en la etiqueta img va la imagen https://i.ytimg.com/vi/AQUI_ID/hqdefault.jpg y en la etiqueta a atributo href va el link del video -->
             <div>
                 <a class="swipebox-video" rel="gallery-videos" href="https://www.youtube.com/watch?v=nZolJafJM_c">
                     <div class="youtube">
@@ -11,6 +13,7 @@
                     </div>
                 </a>
             </div>
+
             <div>
                 <a class="swipebox-video" rel="youtube" href="https://www.youtube.com/watch?v=nZolJafJM_c">
                     <div class="youtube">
@@ -23,3 +26,4 @@
         </div>
     </div>
 </div>
+
