--- a/res/assets/css/index/header_buscador.css
+++ b/res/assets/css/index/header_buscador.css
@@ -21,7 +21,7 @@
   padding-right: 10px; padding-left: 10px;
 }
 .form_botones .btn_cotizacion_producto{ 
-  background-color: #00a2e8;  
+  background-color: #1D71B8;  
   width: 100%;  
   height: 52px;  
   border-radius: 3px;
@@ -39,7 +39,7 @@
   border-radius: 3px;
 }
 .form_botones .btn_ver_categorias{ 
-  background-color: #00a2e8;  
+  background-color: #1D71B8;  
   width: 100%;  
   height: 52px;  
   border-radius: 3px;
