Separamos etiquetas, agrandamos texto de ubicación

--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -59,6 +59,7 @@
     <br>
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
     <br>
+    <div class="row separator"></div>
     {% include "components/etiquetas.html.twig" %}
 {% endblock content %}
 
