--- a/res/assets/css/carlos.css
+++ b/res/assets/css/carlos.css
@@ -163,8 +163,14 @@ span.text-grey{
 .navbar-empresa div{
   padding-right: 0px; 
   padding-left: 0px; 
+  /*Si se necesita agregar un nuevo boton en la 
+  navbar se debe dividir 100 / numero de botones
+  y agregar eso en el width*/
+  width: 20%;
+  text-align: center;
   border-top: 1px solid #B7B7B7;
   border-bottom: 4px solid #0080C0;
+  float: left;
 }
 
 .navbar-empresa div.active {
