Agregado un nuevo video para que funcione el slider de videos

--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -23,6 +23,16 @@
                     </div>
                 </a>
             </div>
+
+            <div>
+                <a class="swipebox-video" rel="youtube" href="https://www.youtube.com/watch?v=-a-ATW5mfIc">
+                    <div class="youtube">
+                        <img  
+                        src="https://i.ytimg.com/vi/-a-ATW5mfIc/hqdefault.jpg" 
+                        alt="">
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </div>
