Iconos en el titulo

--- a/res/application/views/empresa/catalogo_movil.html.twig
+++ b/res/application/views/empresa/catalogo_movil.html.twig
@@ -31,6 +31,8 @@
     {% include "components/header_empresa.html.twig" %}
     {% set catalogo_producto = true %}
     {% include "components/navbar_empresa.html.twig" %}
+        <h3><i class="fa fa-list font-naranja"></i> <strong>Catálogo - Productos principales</strong></h3>
+        <hr>
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
     {% include "components/lista_productos.html.twig" %}
     {% include "components/paginador.html.twig" %}
