--- a/res/application/views/empresa/contacto_movil.html.twig
+++ b/res/application/views/empresa/contacto_movil.html.twig
@@ -29,6 +29,11 @@
     {% include "components/header_empresa.html.twig" %}
     {% set contacto = true %}
     {% include "components/navbar_empresa.html.twig" %}
+    <h3 class="titulos">
+        <i class="fa fa-phone font-naranja"></i>
+        <strong>Contáctenos</strong>
+    </h3>
+    <hr>
     {% include "components/boton_contactenos.html.twig" %}
     {% include "components/contacto.html.twig" %}
     <div class="row">
