--- a/res/application/views/empresa/nosotros_movil.html.twig
+++ b/res/application/views/empresa/nosotros_movil.html.twig
@@ -29,6 +29,11 @@
     {% include "components/header_empresa.html.twig" %}
     {% set nosotros = true %}
     {% include "components/navbar_empresa.html.twig" %}
+    <h3 class="titulos">
+        <i class="fa fa-briefcase font-naranja"></i>
+        <strong>Nuestra Empresa</strong>
+    </h3>
+    <hr>
     {% include "components/mision.html.twig" %}
     {% include "components/vision.html.twig" %}
     {% include "components/boton_contactenos.html.twig" %}
