--- a/res/application/views/empresa/descargar_catalogo_movil.html.twig
+++ b/res/application/views/empresa/descargar_catalogo_movil.html.twig
@@ -31,6 +31,11 @@
     {% include "components/header_empresa.html.twig" %}
     {% set descargar_catalogo = true %}
     {% include "components/navbar_empresa.html.twig" %}
+    <h3>
+        <i class="fa fa-download font-naranja"></i>
+        <strong>Catálogo - Productos principales</strong>
+    </h3>
+    <hr>
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
     
     {% include "components/lista_catalogos.html.twig" %}
