Bototes de redes sociales redondos

--- a/res/application/views/components/redes_sociales.html.twig
+++ b/res/application/views/components/redes_sociales.html.twig
@@ -4,33 +4,33 @@
         <div class="botones-sociales">
             <ul class="list-inline center-block text-center">
             <li>
-                <a name="" type="button" class="share-btn share s_facebook">
-                    <i class="fa fa-facebook"></i>
+                <a name="" type="button" class="btn share-btn share s_facebook">
+                    <i class="fa fa-facebook fa-fw"></i>
                 </a>
             </li>
             <li>
-                <a name="" type="button" class="share-btn share s_plus">
-                    <i class="fa fa-google"></i>
+                <a name="" type="button" class="btn share-btn share s_plus">
+                    <i class="fa fa-google fa-fw"></i>
                 </a>
             </li>
             <li>
-                <a name="" type="button" class="share-btn share s_twitter">
-                    <i class="fa fa-twitter"></i>
+                <a name="" type="button" class="btn share-btn share s_twitter">
+                    <i class="fa fa-twitter fa-fw"></i>
                 </a>
             </li>
             <li>
-                <a name="" type="button" class="share-btn share s_linkedin">
-                    <i class="fa fa-linkedin"></i>
+                <a name="" type="button" class="btn share-btn share s_linkedin">
+                    <i class="fa fa-linkedin fa-fw"></i>
                 </a>
             </li>
             <li>
-                <a name="" type="button" class="share-btn share s_whatsapp">
-                <i class="fa fa-whatsapp"></i>
+                <a name="" type="button" class="btn share-btn share s_whatsapp">
+                <i class="fa fa-whatsapp fa-fw"></i>
                 </a>
             </li>
             <li>
-                <a name="" type="button" class="share-btn share s_email">
-                    <i class="fa fa-envelope"></i>
+                <a name="" type="button" class="btn share-btn share s_email">
+                    <i class="fa fa-envelope fa-fw"></i>
                 </a>
             </li>
         </ul>
