--- a/res/application/views/components/top_menu.html.twig
+++ b/res/application/views/components/top_menu.html.twig
@@ -4,13 +4,13 @@
 		<img src="{{ img_url() }}proveedor-com-co-logo-empresas-haciendo-negocios.png" class="imagen">
 	</a>
     <p class="texto pull-right">
-			<a href="{{ base_url() }}registro/registrar">
+			<a href="JavaScript:launch();">
 				<i class="fa fa-pencil icono"></i>
 				Registro Gratis
 			</a>
 		</p>
 		<p class="texto pull-right">
-			<a href="{{ base_url() }}logueo">
+			<a href="JavaScript:login(this,'false');">
 				<i class="fa fa-user icono"></i>
 				Ingresar
 			</a>
