--- a/res/application/views/components/vision.html.twig
+++ b/res/application/views/components/vision.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-xs-12 vision">
         <h4 class="font-naranja titulo"><i class="glyphicon glyphicon-flag ico_bandera"></i>VISIÓN</h4>
-        <p class="texto_vision">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, totam corporis beatae. Officiis, sit, earum. Facilis reprehenderit delectus dolor quo provident eius debitis non ullam iste, in at doloribus! Voluptatem!</p> <!-- ingresar variable -->
+        <p class="texto_vision">{{empresa.vision}}</p>
     </div>
 	<!-- /.col-xs-12 -->
 </div>
