--- a/res/application/views/components/contacto.html.twig
+++ b/res/application/views/components/contacto.html.twig
@@ -6,31 +6,31 @@
 			<p class="titulo"><i class="font-naranja icono glyphicon glyphicon-home"></i>Dirección</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto">Dirección de la empresa</p> <!-- insertar variable -->
+			<p class="texto">Dirección de la empresa</p> {{usuario.direccion}}
 		</div>
 		<div class="col-xs-12 cont_titulo">
 			<p class="titulo"><i class="font-naranja icono fa fa-phone"></i>Teléfono</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto">Teléfono de la empresa</p> <!-- insertar variable -->
+			<p class="texto">Teléfono de la empresa</p> {{usuario.telefono}}
 		</div>
 		<div class="col-xs-12 cont_titulo">
 			<p class="titulo"><i class="font-naranja icono fa fa-globe"></i>Página Web</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto"><a href="#" class="url">Página web de la empresa</a></p> <!-- insertar variable -->
+			<p class="texto"><a href="{{usuario.web}}" class="url">Página web de la empresa</a></p> {{usuario.web}}
 		</div>
 		<div class="col-xs-12 cont_titulo">
 			<p class="titulo"><i class="font-naranja icono fa fa-facebook-square"></i>Facebook</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto"><a href="#" class="url">Facebook de la empresa</a></p><!-- insertar variable -->
+			<p class="texto"><a href{{usuario.facebook}}" class="url">Facebook de la empresa</a></p>{{usuario.facebook}}
 		</div>
 		<div class="col-xs-12 cont_titulo">
 			<p class="titulo"><i class="font-naranja icono fa fa-twitter-square"></i>Twitter</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto"><a href="#" class="url">Twitter de la empresa</a></p><!-- insertar variable -->
+			<p class="texto"><a href="{{usuario.twitter}}" class="url">Twitter de la empresa</a></p>{{usuario.twitter}}
 		</div>
 	</div>
 	<!-- /.col-xs-12 -->
