--- a/res/application/views/components/nuestra-empresa.html.twig
+++ b/res/application/views/components/nuestra-empresa.html.twig
@@ -9,14 +9,14 @@
             <div class="col-xs-12">
                 <i class="fa fa-map-marker fa-lg fa-fw font-naranja"></i> 
                 <span>
-                    Buenaventura
+                     {{ usuario.ciudad|title }}
                 </span>
             </div>
             <div class="col-xs-12">
                 <img class="img_verificacion" src="{{ img_url() }}membresia/{{ membresia.logo }}" 
                 alt="Icono Membresia" width="19px">
                 <span class="texto-membresia">
-                    Empresa Platino
+                     {{ membresia.nombre }}
                 </span>
             </div>
             <div class="col-xs-12">
@@ -67,7 +67,7 @@
                             Categoria principal: 
                         </span>
                         <span>
-                            Construcción y Arquitectura
+                            {{empresa.categoria|title}}
                         </span>
                     </div>
                 </div>
@@ -77,7 +77,16 @@
                             Productos Principales: 
                         </span>
                         <span>
-                            {{empresa.productos_principales|title}}
+                        
+                            {% if empresa.productos_principales == '0' %}
+                                La empresa no muestra sus productos principales
+                            {% else %}
+                                {% if empresa.productos_principales == '' %}
+                                    La empresa no muestra sus productos principales
+                                {% else %}
+                                {{empresa.productos_principales|title}}
+                                {% endif %}
+                            {% endif %}
                         </span>
                     </div>
                 </div>                
@@ -89,7 +98,8 @@
                 <p class="catalogo ">
                     <i class="glyphicon glyphicon-th ico_cat_soli font-gris"></i>
                     Ver Catálogo - 
-                    <a href="#" class="productos"> 5 - productos  <!-- insertar variable -->
+                     <a href="{{base_url()}}empresa/catalogo_producto/{{empresa.id}}" class="productos"> 
+                        {{empresa.numero_productos}} - productos  
                     </a>
                 </p>
             </div>
@@ -99,8 +109,8 @@
                 <p class="catalogo">
                 <i class="glyphicon glyphicon-list-alt ico_cat_soli font-gris"></i>
                 Productos Solicitados -
-                <a href="#" class="productos">
-                    4 - Solicitudes
+                 <a href="{{base_url()}}empresa/cotizaciones_requeridas/{{empresa.id}}" class="productos">
+                    {{empresa.numero_solicitudes}}  - Solicitudes 
                 </a>
             </div>
         </p> 
