--- a/res/application/views/components/boton_solicitar_cotizacion.html.twig
+++ b/res/application/views/components/boton_solicitar_cotizacion.html.twig
@@ -1,6 +1,6 @@
 <div class="row header">
     <div class="col-xs-12">
-        <button class="btn btn-block btn-lg color-naranja">
+        <button class="btn btn-block btn-lg color-naranja" data-toggle="modal" data-target="#asistentes_proveedor_popup">
             <i class="fa fa-file-text icono"></i>
             <strong>
                 SOLICITAR COTIZACIÓN
