--- a/res/application/views/components/top_menu.html.twig
+++ b/res/application/views/components/top_menu.html.twig
@@ -4,7 +4,7 @@
 		<img src="{{ img_url() }}proveedor-com-co-logo-empresas-haciendo-negocios.png" class="imagen">
 	</a>
     <p class="texto pull-right">
-			<a href="JavaScript:launch();">
+			<a href="JavaScript:launch(this);">
 				<i class="fa fa-pencil icono"></i>
 				Registro Gratis
 			</a>
