--- a/res/application/views/components/boton_contactar.html.twig
+++ b/res/application/views/components/boton_contactar.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-block btn-lg color-naranja">
+        <button class="btn btn-block btn-lg color-naranja" onclick="mensajes()">
         <i class="fa fa-envelope"></i>
         Contactar
         </button>
