back para revision MSOP

--- a/res/application/views/components/contacto.html.twig
+++ b/res/application/views/components/contacto.html.twig
@@ -5,31 +5,31 @@
 			<p class="titulo"><i class="font-naranja icono glyphicon glyphicon-home"></i>Dirección</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto">Dirección de la empresa</p> {{usuario.direccion}}
+			<p class="texto">{{usuario.direccion}}</p> 
 		</div>
 		<div class="col-xs-12 cont_titulo">
 			<p class="titulo"><i class="font-naranja icono fa fa-phone"></i>Teléfono</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto">Teléfono de la empresa</p> {{usuario.telefono}}
+			<p class="texto">{{usuario.telefono}}</p> 
 		</div>
 		<div class="col-xs-12 cont_titulo">
 			<p class="titulo"><i class="font-naranja icono fa fa-globe"></i>Página Web</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto"><a href="{{usuario.web}}" class="url">Página web de la empresa</a></p> {{usuario.web}}
+			<p class="texto"><a href="{{usuario.web}}" class="url"> {{usuario.web}}</a></p>
 		</div>
 		<div class="col-xs-12 cont_titulo">
 			<p class="titulo"><i class="font-naranja icono fa fa-facebook-square"></i>Facebook</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto"><a href{{usuario.facebook}}" class="url">Facebook de la empresa</a></p>{{usuario.facebook}}
+			<p class="texto"><a href{{usuario.facebook}}" class="url">{{usuario.facebook}}</a></p>
 		</div>
 		<div class="col-xs-12 cont_titulo">
 			<p class="titulo"><i class="font-naranja icono fa fa-twitter-square"></i>Twitter</p>
 		</div>
 		<div class="col-xs-12 cont_texto">
-			<p class="texto"><a href="{{usuario.twitter}}" class="url">Twitter de la empresa</a></p>{{usuario.twitter}}
+			<p class="texto"><a href="{{usuario.twitter}}" class="url">{{usuario.twitter}}</a></p>
 		</div>
 	</div>
 	<!-- /.col-xs-12 -->
