--- a/res/application/views/components/lista_productos.html.twig
+++ b/res/application/views/components/lista_productos.html.twig
@@ -3,7 +3,7 @@
         {% for producto in productos %}
             <div class="row">
                 <div class="col-xs-4">
-                    <img class="img-responsive" src={{base_url()}}uploads/resize/SOP/{{producto.imagenes}}" alt="">
+                    <img class="img-responsive" src="{{producto.imagenes}}" alt="">
                     <!-- <img src="{{ producto.imagenes }}" alt="Imagen del producto"> -->
                 </div>
                 <div class="col-xs-8">
